# Arap

./: .gitignore  CMakeLists.txt  README.md
include/app/: input_handler.h  overlay_renderer.h  viewer_app.h
include/solver/: arap.h
include/types/: colors.h  modes.h  selection_mode.h  solver_mode.h
src/: arap_deformer.cpp  control_panel.cpp  control_panel.h  main.cpp  viewer_app.cpp  viewer_app.h
src/app/: input_handler.cpp  overlay_renderer.cpp  viewer_app.cpp  viewer_app.h
src/solver/: arap.cpp  arap.h  arap_deformer.cpp  arap_deformer.h  laplacian.cpp  laplacian.h
src/types/: colors.h  interaction_mode.h  modes.h
src/ui/: control_panel.cpp  control_panel.h
